<resources>
    <string name="app_name">Learner</string>
    <!--<string name="base_url">http://192.168.4.214:8080/</string>-->
    <string name="base_url">http://35.156.14.81:8080/</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_topic">Add New Topic</string>

    <string name="date">on</string>
    <string name="by">by</string>
    <string name="content">Content</string>

    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="profile">PROFILE</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="settings">LOG OUT</string>
    <string name="comment_here">Comment Here</string>
    <string name="send">SEND</string>
    <string name="add_topic_name">add topic name</string>
    <string name="enter_name">topic name cannot be empty</string>
    <string name="content_image">Select Content image</string>
    <string name="cancel_button">CANCEL</string>
    <string name="next_button">NEXT</string>
    <string name="password">password</string>
    <string name="user_name">Username</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="back_button">BACK</string>
    <string name="finish_button">FINISH</string>
    <string name="edit">edit</string>
    <string name="done">done</string>
    <string name="search_hint">search...</string>
    <string name="select_role">Select Role</string>
    <string name="date_tomorrow" translatable="false">Yesterday</string>
    <string name="date_next_weekday" translatable="false">Last week</string>
    <string name="date_next_month" translatable="false">Last month</string>
    <string name="user">user</string>
    <string name="feed">MY FEED</string>
    <string name="permission_title_rationale">Permission Needed</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">CANCEL</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick image.</string>
    <string name="add_question_button">Add</string>
    <string name="select_topic_pack">Select Topic Pack</string>
    <string-array name="register_roles">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>

</resources>
