<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background_dark"
    android:fitsSystemWindows="true">
    <!--topiclist-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="RECOMMENDED"
                android:textSize="20sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/activity_topic_pager_view_pager"
                android:layout_width="match_parent"
                android:layout_height="320dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="MOST POPULAR"
                android:textSize="20sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/activity_topic_pager_view_pager_popular"
                android:layout_width="match_parent"
                android:layout_height="320dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="MOST RECENT"
                android:textSize="20sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/activity_topic_pager_view_pager_mostrecent"
                android:layout_width="match_parent"
                android:layout_height="320dp" />
        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/touch_interceptor_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize" />
    <!--topic-->
    <TabHost
        android:id="@+id/topic_TabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/white"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#4372AA"
            />
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <!--topic tab-->
                <LinearLayout
                    android:id="@+id/topic_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ScrollView
                        android:id="@+id/details_scrollView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:isScrollContainer="true"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/details_image"
                                android:layout_width="match_parent"
                                android:layout_height="320dp"
                                android:adjustViewBounds="true"
                                android:scaleType="centerCrop" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.6dp"
                                android:background="@color/guillotine_background_dark" />
                            <!--user-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:isScrollContainer="true"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/details_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="4dp"
                                    android:layout_marginLeft="@dimen/default_margin"
                                    android:layout_marginRight="@dimen/default_margin"
                                    android:layout_marginTop="12dp"
                                    android:layout_weight="1"
                                    android:textSize="22sp"
                                    android:textColor="@color/guillotine_background_dark"
                                    android:gravity="center"/>
                            </LinearLayout>


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.6dp"
                                android:layout_marginLeft="@dimen/default_margin"
                                android:layout_marginRight="@dimen/default_margin"
                                android:background="@color/guillotine_background_dark" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:gravity="center_vertical"
                                android:layout_marginLeft="@dimen/default_margin"
                                android:layout_marginRight="@dimen/default_margin"
                                android:paddingRight="10dip"
                                android:paddingLeft="10dip"
                                android:background="#30ffffff">
                                <ImageView
                                    android:id="@+id/imgTopicPageUserImage"
                                    android:layout_width="36dp"
                                    android:layout_height="36dp"
                                    android:padding="4dp" />
                                <TextView
                                    android:id="@+id/txtTopicPageUserName"
                                    android:textColor="@color/guillotine_background_dark"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                                <Button
                                    android:text="@string/edit"
                                    android:visibility="gone"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:background="@null"
                                    android:textColor="@color/guillotine_background_dark"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/edit_button" />
                                <TextView
                                    android:id="@+id/txtTopicPageDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/guillotine_background_dark"/>
                            </LinearLayout>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:minHeight="200dp"
                                android:layout_height="wrap_content">
                                <com.group6boun451.learner.widget.Summernote
                                    android:id="@+id/summernote"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:visibility="invisible"/>
                                <com.group6boun451.learner.widget.TouchyWebView
                                    android:id="@+id/topic_content_TouchyWebView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </FrameLayout>

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <!--comment tab-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/comment_tab"
                    android:background="@color/guillotine_background_dark"
                    android:orientation="vertical">
                    <ListView
                        android:id="@+id/topicPageCommentList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!--add new comment tab-->
                <LinearLayout
                    android:id="@+id/new_comment_snack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4372AA"
                    android:orientation="vertical"
                    android:padding="10dip"
                    android:visibility="invisible">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="3dip"
                        android:background="#ffffff" />

                    <EditText
                        android:id="@+id/topicPage_comment_text_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment_here"
                        android:lines="3" />

                    <Button
                        android:id="@+id/send_comment_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <com.alexvasilkov.foldablelayout.UnfoldableView
        android:id="@+id/unfoldable_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/content_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_90" />

        <com.group6boun451.learner.widget.CanaroTextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/guillotine_item_text_size" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="96dp"
        android:src="@drawable/ic_attachment_black_24dp"
        android:visibility="invisible"/>

</merge>

